Fixed MergeSort (disgusting bug)